# judo_data

./: .gitignore  GEMINI.md  README.en.md  README.md  README.pt.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: judo_atle.csv  judo_atle.parquet  judo_atle_compt.csv  judo_atle_compt.parquet  judo_compt.csv  judo_compt.parquet
src/judo_data/: __init__.py  config.py  exporter.py  fetcher.py  pipeline.py  transformer.py
tests/: conftest.py  test_config.py  test_exporter.py  test_fetcher.py  test_pipeline.py  test_transformer.py
